--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -893,7 +893,7 @@ p {
 }
 .line {
   border: none;
-  border-top: 1px solid currentColor;
+  border-top: 1px solid var(--border-color);
   outline: none;
   margin: 20px auto;
   padding: 0;
