--- a/mirrorui/stylus/coms/hr.styl
+++ b/mirrorui/stylus/coms/hr.styl
@@ -1,7 +1,7 @@
 ﻿// hr元素,偶尔用一下
 .line
     border: none
-    border-top:1px solid currentColor
+    border-top:1px solid var(--border-color)
     outline: none
     margin: 20px auto
     padding: 0
