修正不能使用文本对齐样式对齐表格内容

--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -1451,7 +1451,7 @@ p {
 .table th,
 .table td {
   padding: 8px;
-  text-align: left;
+  text-align: inherit;
 }
 .table.border th,
 .table.border td {
