--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -839,7 +839,7 @@ h6 {
   line-height: 1.1;
   color: inherit;
   background-color: inherit;
-  margin: 8px auto;
+  margin: 8px 0;
 }
 h1 {
   font-size: 36px;
