--- a/mirrorui/stylus/function/extendclass.styl
+++ b/mirrorui/stylus/function/extendclass.styl
@@ -45,8 +45,12 @@ $ext-display-inline-flex
 // @extend $ext-align-center
 $ext-align-center
     align-items: center
+$ext-align-end
+    align-items: end
 $ext-justify-center
     justify-content: center
+$ext-justify-end
+    justify-content: end
 // @extend $ext-inline-flex-vh-center
 $ext-inline-flex-vh-center
     @extend $ext-display-inline-flex
