--- a/mirrorui/stylus/coms/table.styl
+++ b/mirrorui/stylus/coms/table.styl
@@ -38,11 +38,12 @@
     --t-table-striped-color:$gray['7']// 交替斑马线背景色
     
 // 彩色主题
-for k,v in $theme-name-colors-dict
-    .table.{k}
-        --t-table-hover-color:v['3']// 悬停背景色
-        --t-table-striped-color:v['2']// 交替斑马线背景色
-    // dark模式下颜色加重
-    .theme-dark .table.{k}
-        --t-table-hover-color:v['7']// 悬停背景色
-        --t-table-striped-color:v['6']// 交替斑马线背景色
+if $theme-name-colors-dict is define
+    for k,v in $theme-name-colors-dict
+        .table.{k}
+            --t-table-hover-color:v['3']// 悬停背景色
+            --t-table-striped-color:v['2']// 交替斑马线背景色
+        // dark模式下颜色加重
+        .theme-dark .table.{k}
+            --t-table-hover-color:v['7']// 悬停背景色
+            --t-table-striped-color:v['6']// 交替斑马线背景色
