--- a/mirrorui/stylus/coms/mnavmenu.styl
+++ b/mirrorui/stylus/coms/mnavmenu.styl
@@ -52,4 +52,4 @@
     // 菜单形式2: 导航菜单,没有子菜单,模仿app那种.每个菜单组容器里含有 span
     // 导航菜单 span
     &-menu
-        @extend $ext-display-block
+        flex: 1 0
