--- a/mirrorui/stylus/coms/msgbox.styl
+++ b/mirrorui/stylus/coms/msgbox.styl
@@ -7,45 +7,37 @@
         opacity: 0.4
         background-color: #000
         z-index: 10000
-    // 父层
+    // 父层,用grid布局
     &-modal
-        @extend $ext-display-flex
-        @extend $ext-justify-center
+        @extend $ext-display-grid
         @extend $ext-position-fixed
         @extend $ext-position-0
         @extend $ext-overflow-x-hidden
         @extend $ext-overflow-y-auto
         z-index: 10001
-    // 弹出框
+    // 弹出框,内容和按钮,flex竖直排布，顶底分布
     &
-        @extend $ext-position-relative
+        @extend $ext-display-flex
+        flex-direction: column
+        justify-content: space-between
         width: 75vw
-        height: 120px
-        padding: 20px
+        min-height: 120px
+        padding: 15px
         background-color: var(--back-color)
-// 输入框高度大一些
-.msgbox-prompt
-    height: 140px
+// 位置,9宫格(1,2...5...,9),先行后列.组合下列样式实现
 .msgbox
-    // 位置中
-    &-center
-        align-self: center
-    // 位置上
-    &-top
-        align-self: flex-start
-    // 位置下
-    &-bottom
-        align-self: flex-end
-// 弹出框按钮
-.msgbox
-    &-ok,&-cancel
-        @extend $ext-position-absolute
-        bottom: 1em
-    &-ok
-        left: 80%
-    &-cancel
-        left: 60%
-
+    // 行居中
+    &-r-c
+        @extend $ext-justify-self-center
+    // 行靠右
+    &-r-r
+        @extend $ext-justify-self-end
+    // 列居中
+    &-c-c
+        @extend $ext-align-self-center
+    // 列靠下
+    &-c-b
+        @extend $ext-align-self-end
 // PC屏
 @media only screen and (min-width: $screen-tablet)
     .msgbox
