--- a/mirrorui/stylus/theme.styl
+++ b/mirrorui/stylus/theme.styl
@@ -37,8 +37,14 @@ $theme-dark='.theme-dark'
 // 彩色主题名字及颜色字典
 //=====================
 $theme-name-colors-dict={
-    red:$red,orange:$orange,yellow:$yellow,green:$green,
-    sky:$sky,blue:$blue,purple:$purple,pink:$pink
+    red:$red,
+    orange:$orange,
+    yellow:$yellow,
+    green:$green,
+    sky:$sky,
+    blue:$blue,
+    purple:$purple,
+    pink:$pink
 }
 //for k,v in $theme-name-colors-dict
 //    .{t}
