--- a/mirrorui/stylus/coms/layoutline.styl
+++ b/mirrorui/stylus/coms/layoutline.styl
@@ -1,7 +1,7 @@
 ﻿// 线性布局
 // 水平/垂直排布,项目不保持none,不放大不缩小
 .layout-h,.layout-hw,.layout-v
-    display: flex
+    @extend $ext-display-flex
     flex: 0 0 auto
 // 水平排布允许换行
 .layout-hw
