--- a/mirrorui/stylus/coms/tools.styl
+++ b/mirrorui/stylus/coms/tools.styl
@@ -95,11 +95,11 @@ for colorName,list in $colors-dict
     @extend $ext-align-center
 .f-v-end
     @extend $ext-align-end
-// flex 布局时,让子元素在垂直轴线上居中,用于子元素
+// flex/grid 布局时,让子元素在垂直轴线上居中,用于子元素
 .f-vs-center
-    align-self: center
+    @extend $ext-align-self-center
 .f-vs-end
-    align-self: end
+    @extend $ext-align-self-end
 
 // display:none block 隐藏|显示
 .d-none
