--- a/mirrorui/stylus/coms/h1h6p.styl
+++ b/mirrorui/stylus/coms/h1h6p.styl
@@ -5,7 +5,7 @@ h1, h2, h3, h4, h5, h6
     line-height: 1.1
     color: inherit
     background-color: inherit
-    margin: 8px 0
+    margin: .6em 0
 h1
     font-size: $font-size-3xl
 h2
@@ -20,5 +20,5 @@ h6
     font-size: $font-size-base
 // p标记
 p
-    margin: 0 0 16px
-    line-height: 1.8em
+    margin: 0 0 1em
+    line-height: 1.8
