--- a/mirrorui/stylus/variables/font.styl
+++ b/mirrorui/stylus/variables/font.styl
@@ -1,15 +1,25 @@
-﻿// 字体大小,继承body
-// 最小字体12px,默认14px
-$font-size-sm = 12px
+﻿// body使用.字体基准大小使用绝对值
 $font-size-base = 14px
-$font-size-md = 16px
-$font-size-lg = 20px
-$font-size-xl = 24px
-$font-size-2xl = 30px
-$font-size-3xl = 36px
-$font-size-4xl = 48px
-$font-size-5xl = 60px
-$font-size-6xl = 84px
+
+// 字体大小,继承body,使用相对单位em
+// 最小,约12.6px
+$font-size-sm = .9em
+// 中,约16.8
+$font-size-md = 1.2em
+// 大,约20.16
+$font-size-lg = 1.44em
+// 巨大系列,约24.5
+$font-size-xl = 1.75em
+// 约30.1
+$font-size-2xl = 2.15em
+// 约36.4
+$font-size-3xl = 2.6em
+// 约47.6
+$font-size-4xl = 3.4em
+// 约58.8
+$font-size-5xl = 4.2em
+// 约84
+$font-size-6xl = 6em
 
 // 字体大小字典
 $fontSize-dict = {
