增加字体大小级别normal,值为1em

--- a/mirrorui/mirrorui.css
+++ b/mirrorui/mirrorui.css
@@ -875,7 +875,7 @@ h5 {
   font-size: 1.2em;
 }
 h6 {
-  font-size: 14px;
+  font-size: 1em;
 }
 p {
   margin: 0 0 1em;
@@ -2686,7 +2686,7 @@ p {
   font-size: 0.9em;
 }
 .text-base {
-  font-size: 14px;
+  font-size: 1em;
 }
 .text-md {
   font-size: 1.2em;
