--- a/mirrorui/stylus/coms/h1h6p.styl
+++ b/mirrorui/stylus/coms/h1h6p.styl
@@ -17,7 +17,7 @@ h4
 h5
     font-size: $font-size-md
 h6
-    font-size: $font-size-base
+    font-size: $font-size-normal
 // p标记
 p
     margin: 0 0 1em
