--- a/mirrorui/stylus/variables/font.styl
+++ b/mirrorui/stylus/variables/font.styl
@@ -4,6 +4,8 @@ $font-size-base = 14px
 // 字体大小,继承body,使用相对单位em
 // 最小,约12.6px
 $font-size-sm = .9em
+// 等于基准
+$font-size-normal = 1em
 // 中,约16.8
 $font-size-md = 1.2em
 // 大,约20.16
@@ -24,7 +26,7 @@ $font-size-6xl = 6em
 // 字体大小字典
 $fontSize-dict = {
     sm:$font-size-sm
-    base: $font-size-base
+    base: $font-size-normal
     md: $font-size-md
     lg: $font-size-lg
     xl: $font-size-xl
