--- a/mirrorui/stylus/variables/font.styl
+++ b/mirrorui/stylus/variables/font.styl
@@ -36,3 +36,16 @@ $fontSize-dict = {
     '5xl': $font-size-5xl
     '6xl': $font-size-6xl
 }
+
+// 字体加粗
+$fontWeight={
+    '1': 100,
+    '2': 200,
+    '3': 300,
+    '4': 400,
+    '5': 500,
+    '6': 600,
+    '7': 700,
+    '8': 800,
+    '9': 900
+}
