--- a/JsLib/index.cshtml
+++ b/JsLib/index.cshtml
@@ -23,6 +23,13 @@
     .doc-part-box {
       margin: 50px auto;
     }
+
+    pre {
+      overflow-x: auto;
+      max-width: 100%;
+      padding: 20px;
+      background-color: #e5e7eb;
+    }
   </style>
 </head>
 <body>
