--- a/mirrorui/stylus/function/extendclass.styl
+++ b/mirrorui/stylus/function/extendclass.styl
@@ -52,6 +52,14 @@ $ext-justify-center
 $ext-justify-end
     justify-content: end
 
+// justify: space
+$ext-justify-sb
+    justify-content: space-between
+$ext-justify-sa
+    justify-content: space-around
+$ext-justify-se
+    justify-content: space-evenly
+
 // justify-self: center|end ,for grid layout
 $ext-justify-self-center
     justify-self: center
